// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createIdentifierContainer Tests should create IdentifierContainer element when user exists in transaction context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "identifier": "transactionUser@okta.com",
        },
        "type": "IdentifierContainer",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should default to existing IdentifierContainer even when user exists in transaction context 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "identifier": "testUser@okta.com",
        },
        "type": "IdentifierContainer",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should hide IdentifierContainer element when user exists in transaction context but NextStep is "admin-consent" 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should hide IdentifierContainer element when user exists in transaction context but NextStep is "identify" 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should hide IdentifierContainer element when user exists in transaction context but features.showIdentifier = false 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should hide IdentifierContainer element when user exists in transaction context but identifier is empty 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [],
    "type": "VerticalLayout",
  },
}
`;

exports[`createIdentifierContainer Tests should not create IdentifierContainer element when one already exists in schema 1`] = `
Object {
  "data": Object {},
  "dataSchema": Object {
    "fieldsToExclude": [Function],
    "fieldsToTrim": Array [],
    "fieldsToValidate": Array [],
    "submit": Object {
      "step": "challenge-authenticator",
    },
  },
  "schema": Object {},
  "uischema": Object {
    "elements": Array [
      Object {
        "options": Object {
          "identifier": "testUser@okta.com",
        },
        "type": "IdentifierContainer",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
